--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "functions": {
     "api/index.php": {
       "runtime": "vercel-php@0.3.1",
-      "excludeFiles": "{test/**}",
+      "excludeFiles": "{api/**}",
       "memory": 256,
       "maxDuration": 5
     }
