--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,15 @@
   "functions": {
     "api/*.php": {
       "runtime": "vercel-php@0.3.1",
-      "excludeFiles": "{api/**}",
+      "excludeFiles": "{test/**}",
       "memory": 256,
       "maxDuration": 5
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/api/index.php"
+    }
+  ]
 }
