--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
   "functions": {
     "api/*.php": {
-      "runtime": "vercel-php@0.6.0",
-      "memory": 256,
-      "maxDuration": 5
+      "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
